Move locations into a map